--- a/index.html
+++ b/index.html
@@ -45,33 +45,33 @@
             </div>
             <div class="feature">
                 <dl>
-                    <dt><a href="https://kkgs-ch.github.io/schedule/2023.png">미사 일정</a></dt>
+                    <dt><a href="https://kkgs-ch.github.io/schedule/2024.PNG">미사 일정</a></dt>
                     <dd>대체로 2, 4째주 주일 오후 3시</dd>
                 </dl>
 
                 <ul>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2629">7월 2일 <i>오전
-                                9:30</i>
-                            주보성인축일행사</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2735">7월 16일 3pm
-                            연중</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2737">8월 20일 3pm
-                            연중</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2738">9월 10일 3pm
-                            연중</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2739">10월 1일 3pm
-                            한가위대축일</a></li>
-                    <li>10월 8-10일 성인 피정 @ Flüeli-Ranft</li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2740">10월 22일 3pm
-                            연중</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2647/">11월 5일 <i>오전 9:30</i><br> Tag der Völker 합동미사, 총회 준비 사목회</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2741/">11월 26일 3pm <br>
-                            그리스도왕 대축일, 정기총회/재정보고</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2742/">12월 10일 3pm 대림,
-                            정기총회/재정보고</a></li>
-                    <li>12월 24일 <i>밤 10시</i> 성탄전야 합동미사</li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2743/">12월 25일 3pm 주님성탄대축일미사, 성탄행사</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2744/">2024년 1월 1일 3pm 천주의 모친 성모마리아, 설</a></li>
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_5897">2월 25일 3pm
+                            사순</a></li>
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_5898">3월 10일 3pm
+                            사순</a></li>
+                    <li>사순 공동체 일일피정: 3월 16일</li>
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_6143">3월 24일 3pm
+                            사순</a></li>
+                    <li><a href="">3월 30일 9pm
+                            부활전야미사 합동미사</a></li>
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_6144">3월 31일 3pm
+                            부활 대축일</a></li>
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_6145">4월 14일 3pm
+                            부활</a></li>
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_6146/">4월 28일 3pm
+                            부활</a></li>
+                    <li>어린이 피정> 4월 19-21일</li>
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_6147/">5월 12일 3pm 
+                            부활, Muttertag</a></li>
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_6148/">5월 26일 3pm 삼위일체대축일</a></li>
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_6149/">6월 9일 3pm 연중</a></li>
+                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_6150/">6월 23일 3pm 연중, <br/>이영덕 안토니오 신부 안식년 시작 미자</a></li>
+                     <li>안식년 중 미사일정은 추후 공지해드리겠습니다.</li>
                 </ul>
                 미사일정 모두 저장하기: 
                 <a href="https://calendar.google.com/calendar/u/0/r?cid=kkgs.ch@gmail.com">구글달력</a> 
