--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             부활</a></li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_6146/">4월 28일 3pm
                             부활</a></li>
-                    <li>어린이 피정> 4월 19-21일</li>
+                    <li>어린이 피정: 4월 19-21일</li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_6147/">5월 12일 3pm 
                             부활, Muttertag</a></li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_6148/">5월 26일 3pm 삼위일체대축일</a></li>
