--- a/index.html
+++ b/index.html
@@ -50,27 +50,8 @@
                 </dl>
 
                 <ul>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_5897">2월 25일 3pm
-                            사순</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_5898">3월 10일 3pm
-                            사순</a></li>
-                    <li>사순 공동체 일일피정: 3월 16일</li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_6143">3월 24일 3pm
-                            사순</a></li>
-                    <li><a href="">3월 30일 9pm
-                            부활전야미사 합동미사</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_6144">3월 31일 3pm
-                            부활 대축일</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_6145">4월 14일 3pm
-                            부활</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_6146/">4월 28일 3pm
-                            부활</a></li>
-                    <li>어린이 피정: 4월 19-21일</li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_6147/">5월 12일 3pm 
-                            부활, Muttertag</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_6148/">5월 26일 3pm 삼위일체대축일</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_6149/">6월 9일 3pm 연중</a></li>
-                    <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_6150/">6월 23일 3pm 연중, <br/>이영덕 안토니오 신부 안식년 시작 미자</a></li>
+                    
+                    <li>1월 1일 오후 3시 설미사</a></li>
                      <li>안식년 중 미사일정은 추후 공지해드리겠습니다.</li>
                 </ul>
                 미사일정 모두 저장하기: 
