--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
                 <ul>
                     
                     <li>1월 1일 오후 3시 설미사</a></li>
-                     <li>안식년 중 미사일정은 추후 공지해드리겠습니다.</li>
                 </ul>
                 미사일정 모두 저장하기: 
                 <a href="https://calendar.google.com/calendar/u/0/r?cid=kkgs.ch@gmail.com">구글달력</a> 
@@ -60,7 +59,9 @@
                 <iframe src="https://calendar.google.com/calendar/embed?src=kkgs.ch%40gmail.com&ctz=Europe%2FZurich"
                     style="border: 0" frameborder="0" scrolling="no"></iframe>
 
-
+                    <dl>
+                        안식년 중 미사일정은 추후 공지해 드리겠습니다.
+                   </dl>
             </div>
             <div class="feature last">
                 <dl>
