Comment general message

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="feature">
                 <dl>
                     <dt><a href="https://kkgs-ch.github.io/schedule/2024.PNG">미사 일정</a></dt>
-                    <dd>대체로 2, 4째주 주일 오후 3시</dd>
+                   <!-- <dd>대체로 2, 4째주 주일 오후 3시</dd>-->
                 </dl>
 
                 <ul>
