--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
 
                 <ul>
                     
-                    <li>1월 1일 오후 3시 설미사</a></li>
+                    <li>2월 9일 오후 3시 대성당 + Foyer 연중 제 5주일 </li>
+                    <li>3월 9일 오후 3시 대성당 + Foyer 사순 제1주일 </li>
+                    <li>3월 23일 오후 3시 대성당 + Foyer 사순 제3주일 </li>
+                      <li>4월 6일 오후 3시 대성당 + Foyer 사순 제5주일 </li>
+                       <li>4월 20일 오후 3시 대성당 + Foyer 주님 부활 대축일 </li>
                 </ul>
                 미사일정 모두 저장하기: 
                 <a href="https://calendar.google.com/calendar/u/0/r?cid=kkgs.ch@gmail.com">구글달력</a> 
