--- a/index.html
+++ b/index.html
@@ -45,17 +45,16 @@
             </div>
             <div class="feature">
                 <dl>
-                    <dt><a href="https://kkgs-ch.github.io/schedule/2024.PNG">미사 일정</a></dt>
+                    <dt><a href="https://kkgs-ch.github.io/schedule/2025.pdf">미사 일정</a></dt>
                    <!-- <dd>대체로 2, 4째주 주일 오후 3시</dd>-->
                 </dl>
 
                 <ul>
                     
-                    <li>2월 9일 오후 3시 대성당 + Foyer 연중 제 5주일 </li>
-                    <li>3월 9일 오후 3시 대성당 + Foyer 사순 제1주일 </li>
-                    <li>3월 23일 오후 3시 대성당 + Foyer 사순 제3주일 </li>
-                      <li>4월 6일 오후 3시 대성당 + Foyer 사순 제5주일 </li>
-                       <li>4월 20일 오후 3시 대성당 + Foyer 주님 부활 대축일 </li>
+                    <li>7월 13일 오후 3시 대성당 + Foyer 연중 제 15주일 </li>
+                    <li>7월 27일 오후 3시 대성당 + Foyer 사순 제17주일 </li>
+                    <li>8월 10일 오후 3시 대성당 + Foyer 사순 제19주일 </li>
+                    <li>8월 24일 오후 3시 대성당 + Foyer 사순 제21주일 </li>
                 </ul>
                 미사일정 모두 저장하기: 
                 <a href="https://calendar.google.com/calendar/u/0/r?cid=kkgs.ch@gmail.com">구글달력</a> 
