--- a/index.html
+++ b/index.html
@@ -51,10 +51,8 @@
 
                 <ul>
                     
-                    <li>7월 13일 오후 3시 대성당 + Foyer 연중 제 15주일 </li>
-                    <li>7월 27일 오후 3시 대성당 + Foyer 사순 제17주일 </li>
-                    <li>8월 10일 오후 3시 대성당 + Foyer 사순 제19주일 </li>
-                    <li>8월 24일 오후 3시 대성당 + Foyer 사순 제21주일 </li>
+                    <li>9월 14일 오후 3시 대성당 + Foyer 십자가 현양 축일 </li>
+                    <li>9월 28일 오후 3시 대성당 + Foyer 연중 제26주일 </li>
                 </ul>
                 미사일정 모두 저장하기: 
                 <a href="https://calendar.google.com/calendar/u/0/r?cid=kkgs.ch@gmail.com">구글달력</a> 
