- changed text of 미사 일정   - and personal information of 사목회장   - changed footer information of technical support   - fixed typo

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="box">
             <div class="feature">
                 <dl id="homepage_info">
-                    <dt>주임신부</dt>
-                    <dd>이영덕(李映德) 안토니오 신부님
+                    <dt>사목회장</dt>
+                    <dd>류정우 베드로
                     </dd>
                 </dl>
                 <ul>
@@ -33,9 +33,7 @@
                             href="https://maria.catholic.or.kr/dictionary/bbs/bbs_view.asp?id=173649&ref=185&menu=4798">미사지향</a>:
                         신부님께 직접 문의하세요
                     </li>
-                    <li>☎️ <a href="tel:+41792042352">+41 79 204 23 52</a> 카톡 <a
-                            href="https://wa.me/41792042352">왓츠앱</a></li>
-                    <li>✉️ <a href="mailto:theoantlee@gmail.com">theoantlee@gmail.com</a> </li>
+                    <li>✉️ <a href="mailto:koreakatholisch@gmail.com">koreakatholisch@gmail.com</a> </li>
                 </ul>
                 <div id="twitter-container">
                     <a class="twitter-timeline" data-lang="ko" data-tweet-limit="2"
@@ -51,8 +49,8 @@
 
                 <ul>
                     
-                    <li>9월 14일 오후 3시 대성당 + Foyer 십자가 현양 축일 </li>
-                    <li>9월 28일 오후 3시 대성당 + Foyer 연중 제26주일 </li>
+                    <li>1월 25일 17시 친교실 (성당 옆건물)</li>
+                    <li>2월22일 17시 친교실(성당 옆건물)</li>
                 </ul>
                 미사일정 모두 저장하기: 
                 <a href="https://calendar.google.com/calendar/u/0/r?cid=kkgs.ch@gmail.com">구글달력</a> 
@@ -105,10 +103,11 @@
             </div>
             <div class="feature">
                 <p>Webmaster & Technical support <br> 홈페이지 관리 및 기술 지원 <br>
-                    <a href="mailto:kkgs.ch@gmail.com">kkgs.ch@gmail.com</a>
+                    <a href="mailto:koreakatholisch@gmail.com">koreakatholisch@gmail.com</a>
                 </p>
             </div>
         </div>
+    </div>
 </body>
 
 </html>
