- changed relative paths

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="utf-8">
     <meta name="google-site-verification" content="BuMtcDT7ZKJ9FP2TVZ34C8hhR6Y3KRU37GSsAosYgjk" />
     <title>취리히 한인성당, 스위스 취리히 한인 천주교회, Korean Catholic Mission, Koreanische Katholische Gemeinde in Zürich </title>
-    <link rel='stylesheet' href='https://kkgs-ch.github.io/css/style.css'>
+    <link rel='stylesheet' href='/css/style.css'>
 </head>
 
 <body>
     <div id="header">
         <div id="logo">
             <picture>
-                <source srcset="https://kkgs-ch.github.io/images/logo_dark.png" media="(prefers-color-scheme: dark)">
-                <img src="https://kkgs-ch.github.io/images/logo.png" class="kkgs-logo">
+                <source srcset="/images/logo_dark.png" media="(prefers-color-scheme: dark)">
+                <img src="/images/logo.png">
             </picture>
         </div>
     </div>
